app-template/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
      kubernetes.io/ingress.class: traefik
  name: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`web-dev.local`)
      kind: Rule
      services:
        - name: web
          port: 80
